# digikam_screensaver

./: .gitignore  Makefile  README.md  digikam_screensaver_build.py  digikam_windows_screensaver.spec  pyproject.toml
.github/workflows/: code_check.yml
assets/: default_slide_1.xcf  default_slide_2.xcf
digikam_screensaver/: copy_pictures.py  digikam_screensaver.py  screen_saver.py  screensaver.py  settings.py
