[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "digikam_screensaver"
version = "1.0"
description = ""
readme = "README.md"
requires-python = ">=3.0"
keywords = ["Screensaver", "Windows", "Python", "DigiKam"]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "pydantic",
    "pydantic-settings",
    "progress"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
]

[project.scripts]
digikam_screensaver_copy_pictures = "digikam_screensaver.copy_pictures:copy_pictures"

[tool.setuptools]
packages = ["digikam_screensaver"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]
