[build-system]
requires = [
    "setuptools",
]
build-backend = "setuptools.build_meta"

[project]
name = "digikam_screensaver"
version = "0.3"
description = "Simple digikam screensaver for Windows"
readme = "README.md"
requires-python = ">=3.0"
keywords = ["Screensaver", "Windows", "Python", "DigiKam"]
authors = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"},
]
maintainers = [
  {name="Bohdan Bobrowski", email="bohdanbobrowski@gmail.com"}
]
dependencies = [
    "pydantic",
    "pydantic-settings",
    "pillow",
    "pyyaml",
    "comtypes",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "mypy",
    "types-PyYAML",
    "types-pyinstaller",
    "types-psutil",
    "pyinstaller",
]

[tool.setuptools]
packages = ["digikam_screensaver"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "UP", "B", "I"]

[tool.mypy]
exclude = ["venv", "dist", "build"]
